[tool.poetry]
name = "pyapsi"
version = "0.2.1"
description = "Python wrapper for APSI"
authors = ["Lukas Grossberger <code@grossberger.xyz>"]

[tool.poetry.dependencies]
python = ">=3.11"
pybind11 = "^2.13.0"

[poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
build = "^0.8.0"

[tool.pydocstyle]
match-dir = "apsi"
convention = "google"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.13.0",
]
build-backend = "setuptools.build_meta"
